--- a/CadastroUsuario/src/main/webapp/cadastro/StyleCadastro.css
+++ b/CadastroUsuario/src/main/webapp/cadastro/StyleCadastro.css
@@ -1,1 +1,72 @@
 @charset "UTF-8";
+
+* {
+	margin: 0px;
+	box-sizing: border-box;
+	font-family: monospace;
+}
+
+body{
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+
+.container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	height: 100vh;
+	width: 100%;
+	background-color: Orange;
+}
+
+form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	
+	border-radius: 5px;
+	background-color: WhiteSmoke;
+	padding: 35px 50px;
+	gap: 10px;
+	width: 25%;
+}
+
+
+form input{
+	outline: none;
+	border: 1px solid LightSteelBlue;
+	border-radius: 4px;
+	padding: 10px 15px;
+	font-size: 15px;
+	width: 100%;
+}
+
+form h1{
+	padding: 15px;
+	font-size: 24px;
+}
+
+
+#cadastrar{
+	cursor: pointer;
+	background-color: LimeGreen;
+	border-radius: 4px;
+	outline: none;
+	border: none;
+	font-size: 22px;
+	color: white;
+	font-weight: bold;
+	margin-top: 20px;	
+	width: 100%;
+}
+
+ #cadastrar:hover{
+	
+	background-color: ForestGreen;
+	transition: 0.5s;
+	color: WhiteSmoke;
+}
